--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
-Django>=5.1.5
+asgiref==3.8.1
+
+Django==5.1.6
+
+django-environ==0.12.0
+
+psycopg2-binary==2.9.10
+
+sqlparse==0.5.3
+
+tzdata==2025.1
+
+Pillow==11.1.0
